Multiple fixes on Dark Mode across different modules and components

--- a/renderer/styles/flow/reactFlow.css
+++ b/renderer/styles/flow/reactFlow.css
@@ -282,6 +282,10 @@
   z-index: -1;
 }
 
+[data-theme="dark"] .react-flow__handle.connectable {
+  background-color: #dfdfdf;
+}
+
 .react-flow__handle-valid {
   background: #55dd99;
 }
